--- a/settings.ini
+++ b/settings.ini
@@ -1,18 +1,18 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = {lib_name}
+lib_name = nbdev_colab_tutorial
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = {user}
-# description = A description of your project
+user = miguel8997
+description = A description of your project
 # keywords = some keywords
-author = {author}
-author_email = {author_email}
+author = Miguel Ortiz
+author_email = m.ortiz09@ufromail.cl
 # copyright = Put your copyright information here
-branch = {branch}
+branch = master
 version = 0.0.1
 min_python = 3.6
 audience = Developers
